<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addNewStudents"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nameStudents"
                android:imeOptions="actionNext"
                android:paddingLeft="@dimen/padding8dp"
                android:singleLine="true"
                android:textSize="@dimen/textSizeNormal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_NearBest">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4dp"
                android:hint="@string/addressStudents"
                android:paddingLeft="@dimen/padding8dp"
                android:textSize="@dimen/textSizeNormal" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/etBirthdate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_etAverage"
            android:drawableLeft="@drawable/ic_date_range_green_24dp"
            android:drawablePadding="@dimen/padding8dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding8dp"
            android:text="@string/birthDateStudents"
            android:textSize="@dimen/textSizeNormal" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin_4dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:layout_marginBottom="@dimen/margin_NearBest"

            android:background="@color/colorGray2" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_NearBest">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLiterature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4dp"
                android:hint="@string/pLiterature"
                android:inputType="number"
                android:paddingLeft="@dimen/padding8dp"
                android:textSize="@dimen/textSizeNormal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_NearBest">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ettMath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4dp"
                android:hint="@string/pMath"
                android:inputType="number"
                android:paddingLeft="@dimen/padding8dp"
                android:textSize="@dimen/textSizeNormal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_NearBest">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEngLish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4dp"
                android:hint="@string/pEnglish"
                android:inputType="number"
                android:paddingLeft="@dimen/padding8dp"
                android:textSize="@dimen/textSizeNormal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_NearBest">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4dp"
                android:hint="@string/classStudents"
                android:inputType="number"
                android:paddingLeft="@dimen/padding8dp"
                android:textSize="@dimen/textSizeNormal" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:gravity="right"
            android:orientation="horizontal">

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btCancel"
                style="@style/Button_Theme"
                android:text="@string/cancel"
                app:bootstrapBrand="danger"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btSave"
                android:text="@string/save"
                style="@style/Button_Theme"
                app:bootstrapBrand="success"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />

        </LinearLayout>
    </LinearLayout>

</layout>